--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button onclick="window.location.href = 'trans.html';" style="margin-top: 50px;">Visual Stimuli</button>
         <button onclick="window.location.href = 'practice.html';" style="margin-top: 50px;">Visual Condition Practice Trials</button>
         <button onclick="window.location.href = 'trial.html';" style="margin-top: 50px;">Visual Condition Trials</button>
+        <button onclick="window.location.href = 'table_example.html';" style="margin-top: 50px;">Tabular Condition Examples</button>
         <button onclick="window.location.href = 'table.html';" style="margin-top: 50px;">Tabular Condition Trials</button>
         <button onclick="window.location.href = 'table_practice.html';" style="margin-top: 50px;">Tabular Condition Practice Trials</button>
         <button onclick="window.location.href = 'enhanced_table.html';" style="margin-top: 50px;">Enhanced Table Examples</button>
