--- a/trans.html
+++ b/trans.html
@@ -21,14 +21,7 @@
 
         <hr>
         <h2> Encoding Types</h2>
-        <p>
-            In our study, we encoded numerical value pairs using various visual/tactile elements. The below sections
-            will explain how values are <b>encoded and represented</b> in these encodings.
-            Note that "visual" and "tactile" present same types of encodings on different mediums. It is important for
-            you to understand the relationship between numerical value and encoding types.
-        </p>
 
-        <h3>Lines</h3>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -38,7 +31,6 @@
         </div>
         <hr>
 
-        <h3>Areas</h3>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -55,7 +47,6 @@
         <hr>
 
 
-        <h3>Curves</h3>
         <div class="example-svg">
             <svg baseProfile="full" height="6cm" version="1.1" width="12cm" xmlns="http://www.w3.org/2000/svg"
                 xmlns:ev="http://www.w3.org/2001/xml-events" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -70,7 +61,7 @@
         </div>
         <hr>
         <div style="margin-bottom: 5%;">
-            <b>Click "Proceed" to see more explanations on encoding types.</b>
+            <b>Click "Proceed" to see more encoding types.</b>
             <div style="text-align: center; margin-top: 5%; margin-bottom: 5%;">
                 <nav>
                     <a id="survey-link" href="encoding.html">
