--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Zhongzheng Xu</h1>
 
-          <p class="title">CS Masters Student @ Brown</p>
+          <p class="title">CS Master's Student @ Brown</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -169,12 +169,12 @@
 
         <section class="about-text">
           <p>
-            I am a first-year computer science masters student at <a href="https://www.brown.edu/" class="custom-link">Brown University</a>. In my senior year at <a href="https://www.emory.edu/home/index.html" class="custom-link">Emory University</a>,
+            I am a first-year computer science master's student at <a href="https://www.brown.edu/" class="custom-link">Brown University</a>. In my senior year at <a href="https://www.emory.edu/home/index.html" class="custom-link">Emory University</a>,
             I worked with <a href="https://emilywall.github.io/" class="custom-link">Dr. Emily Wall</a>, who leads Emory <a href="https://cav-lab.github.io/" class="custom-link">CAV Lab</a>. My research interests are data visualization and human-computer interaction. 
           </p>
 
           <p>
-            In my most recent project, I replicated Cleveland and McGill's graphical perception study and expanded it into the
+            In my most recent project, I replicated Cleveland and McGill's graphical perception study and expanded their method to the
             tactile modality. We evaluated elementary data encoding types on tactile paper, which is a commonly-used medium for 
             people who are blind or with low vision. 
           </p>
@@ -351,7 +351,7 @@
               <span>2017 - 2019</span>
 
               <p class="timeline-text">
-                Woodland is a small city near Sacramento, California. I was a top 1% student that played soccer and wrestling. 
+                Woodland is a small city near Sacramento, California. I graduated as a top 1% student. As an athelete, I played soccer and wrestling. 
               </p>
 
             </li>
