--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <span>2023 — 2025</span>
 
               <p class="timeline-text">
-                I am currently a first-year masters student at Brown University studying computer science. 
+                I am currently a first-year master's student at Brown University studying computer science. 
               </p>
 
             </li>
