--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             people who are blind or with low vision. 
           </p>
           <p>
-            To pronouce my name, think of it like "John Jane Shoe". In my free time, I like being a barista and photographer. 
+            To pronounce my name, think of it like "John Jane Shoe". In my free time, I like being a barista and photographer. 
           </p>
         </section>
 
