--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </p>
 
           <p>
-            Currently, I am working under Dr. Jeff Huang at Brown HCI Lab. We are exploring the effect of visualizations on people's self-reflection over their personal text data.
+            Currently, I am working under <a href="https://jeffhuang.com/" class="custom-link">Dr. Jeff Huang</a> at <a href="https://hci.cs.brown.edu/" class="custom-link">Brown HCI Lab</a>. We are exploring the effect of visualizations on people's self-reflection over their personal text data.
             In my senior year at <a href="https://www.emory.edu/home/index.html" class="custom-link">Emory University</a>,
             I worked with <a href="https://emilywall.github.io/" class="custom-link">Dr. Emily Wall</a>, who leads Emory <a href="https://cav-lab.github.io/" class="custom-link">CAV Lab</a>. My research interests are data visualization, human-computer interaction, as well as how we might incorporate LLM into data visualization pipelines. 
           </p>
