added light/dark mode

--- a/index.html
+++ b/index.html
@@ -485,10 +485,9 @@
 
   </main>
 
-
-
-
-
+  <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+    <ion-icon name="sunny-outline"></ion-icon>
+  </button>
 
   <!--
     - custom js link
