--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 
         <section class="about-text">
           <p>
-            I am a second-year computer science master's student at <a href="https://www.brown.edu/" class="custom-link">Brown University</a>. 
+            I am a second-year computer science <b>master's student</b> at <a href="https://www.brown.edu/" class="custom-link">Brown University</a>. 
           </p>
 
           <p>
             Currently, I am working under <a href="https://jeffhuang.com/" class="custom-link">Dr. Jeff Huang</a> at <a href="https://hci.cs.brown.edu/" class="custom-link">Brown HCI Lab</a>. We are exploring the effect of visualizations on people's self-reflection over their personal text data.
             In my senior year at <a href="https://www.emory.edu/home/index.html" class="custom-link">Emory University</a>,
-            I worked with <a href="https://emilywall.github.io/" class="custom-link">Dr. Emily Wall</a>, who leads Emory <a href="https://cav-lab.github.io/" class="custom-link">CAV Lab</a>. My research interests are data visualization, human-computer interaction, as well as how we might incorporate LLM into data visualization pipelines. 
+            I worked with <a href="https://emilywall.github.io/" class="custom-link">Dr. Emily Wall</a>, who leads Emory <a href="https://cav-lab.github.io/" class="custom-link">CAV Lab</a>. My research interests are <b>data visualization</b>, <b>human-computer interaction</b>, as well as how we might incorporate <b>LLM</b> into data visualization pipelines. 
           </p>
           <p>
             To pronounce my name, think of it like "John Jane Shoe". In my free time, I like being a barista and photographer. 
@@ -459,7 +459,7 @@
               </a>
             </li>
             <li class="project-item active" data-filter-item data-category="Data Visualization, LLM">
-              <a href="https://arxiv.org/abs/2404.19097">
+              <a href="https://ieeexplore.ieee.org/document/10771094">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
